--- a/asp_mvc_2/Views/Home/Welcome.cshtml
+++ b/asp_mvc_2/Views/Home/Welcome.cshtml
@@ -4,4 +4,4 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Hi <b>@Context.User.Identity.Name</b>! Welcome to my first MVC 5 Web App! </h2>
+<h2>Hello <b>@Context.User.Identity.Name</b>! Welcome to my first MVC 5 Web App! </h2>
