--- a/asp_mvc_2/Views/Home/Welcome.cshtml
+++ b/asp_mvc_2/Views/Home/Welcome.cshtml
@@ -1,4 +1,6 @@
 ﻿
+@Html.ActionLink("Signout", "SignOut", "Account") 
+
 @{
     ViewBag.Title = "Welcome";
     Layout = "~/Views/Shared/_Layout.cshtml";
