--- a/asp_mvc_2/Views/Shared/AdminOnly.cshtml
+++ b/asp_mvc_2/Views/Shared/AdminOnly.cshtml
@@ -6,3 +6,9 @@
 
 <h2>AdminOnly</h2>
 
+<div id="divUserListContainer">
+    @Html.Action("ManageUserPartial", "Home");
+</div>   
+
+<script src="~/scripts/jquery-1.10.2.min.js"></script>
+<link href="~/Content/themes/base/all.css" rel="stylesheet" />
