--- a/asp_mvc_2/Views/Home/ManageUserPartial.cshtml
+++ b/asp_mvc_2/Views/Home/ManageUserPartial.cshtml
@@ -34,3 +34,123 @@
         </tbody>
     </table>
 </div>
+
+<div id="divEdit" style="display:none">
+    <input type="hidden" id="hidID" />
+    <table>
+        <tr>
+            <td>Login Name</td>
+            <td><input type="text" id="txtLoginName" class="form-control" /></td>
+        </tr>
+        <tr>
+            <td>Password</td>
+            <td><input type="text" id="txtPassword" class="form-control" /></td>
+        </tr>
+        <tr>
+            <td>First Name</td>
+            <td><input type="text" id="txtFirstName" class="form-control" /></td>
+        </tr>
+        <tr>
+            <td>Last Name</td>
+            <td><input type="text" id="txtLastName" class="form-control" /></td>
+        </tr>
+        <tr>
+            <td>Gender</td>
+            <td>
+                @Html.DropDownListFor(o => o.UserGender.SelectedGender,
+                       new SelectList(Model.UserGender.Gender, "Value", "Text"),
+                       "",
+                       new { id = "ddlGender", @class = "form-control" })
+        </td>
+    </tr>
+    <tr>
+        <td>Role</td>
+        <td>
+            @Html.DropDownListFor(o => o.UserRoles.SelectedRoleID,
+                       new SelectList(Model.UserRoles.UserRoleList, "LOOKUPRoleID", "RoleName"),
+                       "",
+                       new { id = "ddlRoles", @class = "form-control" })
+    </td>
+</tr>
+</table>
+</div>
+
+<script type="text/javascript">
+
+    $(function () {
+
+        var initDialog = function (type) {
+            var title = type;
+            $("#divEdit").dialog({
+                autoOpen: false,
+                modal: true,
+                title: type + ' User',
+                width: 360,
+                buttons: {
+                    Save: function () {
+                        var id = $("#hidID").val();
+                        var role = $("#ddlRoles").val();
+                        var loginName = $("#txtLoginName").val();
+                        var loginPass = $("#txtPassword").val();
+                        var fName = $("#txtFirstName").val();
+                        var lName = $("#txtLastName").val();
+                        var gender = $("#ddlGender").val();
+                        UpdateUser(id, loginName, loginPass, fName, lName, gender, role);
+                        $(this).dialog("destroy");
+                    },
+                    Cancel: function () { $(this).dialog("destroy"); }
+                }
+            });
+        }
+        function UpdateUser(id, logName, logPass, fName, lName, gender, role) {
+            $.ajax({
+                type: "POST",
+                url: "@(Url.Action("UpdateUserData","Home"))",
+                data: { userID: id, loginName: logName, password: logPass, firstName: fName, lastName: lName, gender: gender, roleID: role },
+                success: function (data) {
+                    $("#divUserListContainer").load("@(Url.Action("ManageUserPartial","Home", new { status ="update" }))");
+                },
+                error: function (error) {
+                    //to do:
+                }
+            });
+        }
+
+        function DeleteUser(id) {   
+            $.ajax({ 
+                type: "POST", 
+                url: "@(Url.Action("DeleteUser","Home"))", 
+                data: { userID: id }, 
+            success: function (data) { 
+                $("#divUserListContainer").load("@(Url.Action("ManageUserPartial","Home", new { status ="delete" }))"); 
+            }, 
+            error: function (error) { } 
+        }); 
+    }  
+$("a.lnkDelete").on("click", function () { 
+    var row = $(this).closest('tr'); 
+    var id = row.find("td:eq(0)").html().trim(); 
+    var answer = confirm("You are about to delete this user with ID " + id + " . Continue?"); 
+    if (answer) 
+        DeleteUser(id); 
+    return false; 
+});
+
+        $("a.lnkEdit").on("click", function () {
+            initDialog("Edit");
+            $(".alert-success").empty();
+            var row = $(this).closest('tr');
+            $("#hidID").val(row.find("td:eq(0)").html().trim());
+            $("#txtLoginName").val(row.find("td:eq(1)").html().trim())
+            $("#txtPassword").val(row.find("td:eq(2)").html().trim())
+            $("#txtFirstName").val(row.find("td:eq(3)").html().trim())
+            $("#txtLastName").val(row.find("td:eq(4)").html().trim())
+            $("#ddlGender").val(row.find("td:eq(5)").html().trim())
+            $("#ddlRoles").val(row.find("td:eq(7) > input").val().trim());
+            $("#divEdit").dialog("open");
+            return false;
+        });
+    });
+</script>
+
+<span class="alert-success">@ViewBag.Message</span>  
