--- a/asp_mvc_2/Views/Shared/_Layout.cshtml
+++ b/asp_mvc_2/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.11.4.min.js"></script>
@@ -36,7 +37,9 @@
         </footer>
     </div>
 
+    <script src="~/Scripts/bootstrap.min.js"> </script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
 
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    
 </body>
 </html>
