--- a/asp_mvc_2/Views/Home/ManageUserPartial.cshtml
+++ b/asp_mvc_2/Views/Home/ManageUserPartial.cshtml
@@ -71,8 +71,7 @@
                        "",
                        new { id = "ddlRoles", @class = "form-control" })
     </td>
-</tr>
-</table>
+</tr> </table>
 </div>
 
 <script type="text/javascript">
