--- a/asp_mvc_2/Views/Home/Welcome.cshtml
+++ b/asp_mvc_2/Views/Home/Welcome.cshtml
@@ -7,3 +7,5 @@
 }
 
 <h2>Hello <b>@Context.User.Identity.Name</b>! Welcome to my first MVC 5 Web App! </h2>
+
+@Html.ActionLink("Edit Profile", "EditProfile", "Home") 
