--- a/asp_mvc_2/Views/Shared/_Layout.cshtml
+++ b/asp_mvc_2/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/themes/base/all.css" rel="stylesheet" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.11.4.min.js"></script>
@@ -24,7 +23,21 @@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">@Html.ActionLink("Home", "Index", "Home")</li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" id="dropdownCommonMenu" datatoggle="dropdown">DropDown</a>                         <ul class="dropdown-menu" role="menu" arialabelledby="dropdownCommonMenu">
+                            <li role="menuitem" class="nav-header">Header 1</li>
+                            <li role="menuitem">@Html.ActionLink("Item 1", "Index", "Home")</li>
+                            <li role="menuitem" class="disabled">@Html.ActionLink("Item 2 (disabled)", "Index", "Home")</li>
+                            <li role="menuitem" class="divider"></li>
+                            <li role="menuitem" class="nav-header">Header 2</li>
+                            <li role="menuitem">@Html.ActionLink("Item 3", "Index", "Home")</li>
+
+                        </ul>
+                    </li>
+                  </ul>
             </div>
         </div>
     </div>
