--- a/asp_mvc_2/Views/Shared/_Layout.cshtml
+++ b/asp_mvc_2/Views/Shared/_Layout.cshtml
@@ -6,9 +6,9 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.11.4.min.js"></script>
+    <script src="~/scripts/modernizr-2.8.3.js"></script>
+    <script src="~/scripts/jquery-1.12.4.min.js"></script>
+    <script src="~/scripts/jquery-ui-1.12.1.min.js"></script>
     <link href="~/Content/themes/base/all.css" rel="stylesheet" />
 </head>
 <body>
@@ -27,15 +27,23 @@
                     <li class="dropdown">@Html.ActionLink("Home", "Index", "Home")</li>
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" id="dropdownCommonMenu" datatoggle="dropdown">DropDown</a>                         <ul class="dropdown-menu" role="menu" arialabelledby="dropdownCommonMenu">
+                        <a href="#" id="dropdownCommonMenu" class="dropdown-toggle" data-toggle="dropdown">DropDown <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownCommonMenu">
                             <li role="menuitem" class="nav-header">Header 1</li>
-                            <li role="menuitem">@Html.ActionLink("Item 1", "Index", "Home")</li>
-                            <li role="menuitem" class="disabled">@Html.ActionLink("Item 2 (disabled)", "Index", "Home")</li>
+                            <li role="menuitem">
+                                @Html.ActionLink("Item 1", "Index", "Home")
+                            </li>
+                            <li role="menuitem" class="disabled">
+                                @Html.ActionLink("Item 2", "Index", "Home")
+                            </li>
                             <li role="menuitem" class="divider"></li>
                             <li role="menuitem" class="nav-header">Header 2</li>
-                            <li role="menuitem">@Html.ActionLink("Item 3", "Index", "Home")</li>
+                            <li role="menuitem">
+                                @Html.ActionLink("Item 3", "Index", "Home")
+                            </li>
 
                         </ul>
+
                     </li>
                   </ul>
             </div>
@@ -50,8 +58,8 @@
         </footer>
     </div>
 
-    <script src="~/Scripts/bootstrap.min.js"> </script>
-    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script src="~/scripts/bootstrap.min.js"> </script>
+    <script src="~/scripts/jquery-ui-1.12.1.min.js"></script>
 
     
 </body>
